--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -8,7 +8,7 @@ on:
 env:
   TF_CLOUD_ORGANIZATION: "mattspahr-sandbox"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "learn-terraform-github-actions"
+  TF_WORKSPACE: "hvs-demo"
   CONFIG_DIRECTORY: "./"
 
 jobs:
