--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -9,7 +9,7 @@ env:
   TF_CLOUD_ORGANIZATION: "mattspahr-sandbox"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "hvs-demo-workspace"
-  CONFIG_DIRECTORY: "./"
+  CONFIG_DIRECTORY: "./app"
 
 jobs:
   terraform:
